Fixing constant lookup bug in synthdefs which led to nil :index error.
* When constants were being looked up to connect input params to ugens they were
not always being found because of the types of the arguments.  Fixed.

* Now enabling the concurrent GC by default when running through lein, which
helps to limit the GC pauses.

* Thanks to Sam Aaron for both the index bug report and the improved JVM args.